objects/smagicinteract__Optout_Settings__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__Keyword__c</fullName>
        <label>Keyword</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>smagicinteract__Optout_Field__c</fullName>
        <label>Optout Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Optout Settings</label>
    <listViews>
        <fullName>smagicinteract__Optout_Settings</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__Object_Name__c</columns>
        <columns>smagicinteract__Optout_Field__c</columns>
        <columns>smagicinteract__Keyword__c</columns>
        <filterScope>Everything</filterScope>
        <label>Optout Settings</label>
    </listViews>
    <nameField>
        <displayFormat>SM-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Optout Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>